A-lanlan/envoy-gateway-example/local-rate-limit.yaml
---
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: BackendTrafficPolicy
metadata:
  name: policy-httproute
spec:
  targetRefs:
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      name: http-ratelimit
  rateLimit:
    local:
      rules:
        - limit:
            requests: 10
            unit: Hour
        - clientSelectors:
            - headers:
                - name: x-user-id
                  value: one
                - name: x-org-id
                  value: test
                  invert: true
          limit:
            requests: 3
            unit: Hour
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: http-ratelimit
spec:
  parentRefs:
    - name: eg
  hostnames:
    - ratelimit.example
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - group: ""
          kind: Service
          name: backend
          port: 3000
